Fix the issues found by Sonarqube